--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                     Comidas del fin <br> del mundo
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Olivia Ros creció en una pequeña ciudad costera donde desarrolló su pasión por la comida desde una edad temprana. Después de completar sus estudios en gastronomía, viajó por todo el mundo para aprender sobre diferentes culturas culinarias y técnicas de cocina. Con su creatividad y habilidad para fusionar sabores únicos, Olivia rápidamente se convirtió en una chef reconocida a nivel internacional. Actualmente, administra su propio restaurante de alta cocina en el centro de una gran ciudad, donde sigue sorprendiendo a sus comensales con exquisitos platos innovadores.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
