--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Gané el premio al Mejor Chef Joven del Año en una competencia internacional de chefs emergentes.
+Publiqué mi primer libro de cocina, que se convirtió en un superventas y fue aclamado por críticos gastronómicos de renombre.
+Fui invitada como juez en un famoso programa de cocina televisivo, donde demostró su expertise y ganó admiración por su criterio culinario.
         </p>
 
 
