--- a/index.html
+++ b/index.html
@@ -80,20 +80,14 @@ Fui invitada como juez en un famoso programa de cocina televisivo, donde demostr
                 <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    La fotógrafa gastronómica Olivia Ros nos habla en detalle de sus deliciosas imágenes, su proceso creativo y los secretos profesionales que le ayudan a conseguir resultados tan extraordinarios.
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Crítica culinaria</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    “La crítica gastronómica es el análisis del hecho culinario desde la perspectiva individual y desde los propios gustos. Se puede hacer de restaurantes, vinos, de opinión pura. (...) Los críticos analizamos desde un punto de vista subjetivo y personal; estamos hablando de gustos personales y eso marca tu relación con la cocina.”.
                 </p>
             </div>
             <div class="col-12 col-md-4">
